--- a/.github/workflows/upload-extension.yml
+++ b/.github/workflows/upload-extension.yml
@@ -3,6 +3,10 @@ on:
     # Sequence of patterns matched against refs/tags
     tags:
     - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 
 name: Upload extension Release
 
