--- a/.github/workflows/upload-extension.yml
+++ b/.github/workflows/upload-extension.yml
@@ -38,25 +38,25 @@ jobs:
       - name: "Determine tag"
         run: "echo \"RELEASE_TAG=${GITHUB_REF#refs/tags/}\" >> $GITHUB_ENV"
 
-#      - name: "Create release"
-#        uses: "actions/github-script@v5"
-#        with:
-#          github-token: "${{ secrets.GITHUB_TOKEN }}"
-#          script: |
-#            try {
-#              await github.rest.repos.createRelease({
-#                draft: false,
-#                generate_release_notes: true,
-#                name: process.env.RELEASE_TAG,
-#                owner: context.repo.owner,
-#                prerelease: false,
-#                repo: context.repo.repo,
-#                tag_name: process.env.RELEASE_TAG,
-#              });
-#            } catch (error) {
-#              core.setFailed(error.message);
-#            }
-#
+      - name: "Create release"
+        uses: "actions/github-script@v5"
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          script: |
+            try {
+              await github.rest.repos.createRelease({
+                draft: false,
+                generate_release_notes: true,
+                name: process.env.RELEASE_TAG,
+                owner: context.repo.owner,
+                prerelease: false,
+                repo: context.repo.repo,
+                tag_name: process.env.RELEASE_TAG,
+              });
+            } catch (error) {
+              core.setFailed(error.message);
+            }
+
 #      - name: Upload release attachment
 #        uses: actions/github-script@v5
 #        with:
