--- a/.github/workflows/upload-extension.yml
+++ b/.github/workflows/upload-extension.yml
@@ -15,13 +15,6 @@ jobs:
     name: Upload Release Asset
     runs-on: ubuntu-latest
     steps:
-
-      # Print the available attributes of context
-      - name: View context attributes
-        uses: actions/github-script@v5
-        with:
-          script: console.log(context)
-
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -35,45 +28,24 @@ jobs:
           cd src
           python build.py
       
-      - name: "Determine tag"
-        run: "echo \"RELEASE_TAG=${GITHUB_REF#refs/tags/}\" >> $GITHUB_ENV"
-
-      - name: "Create release"
-        uses: "actions/github-script@v5"
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-          script: |
-            try {
-              await github.rest.repos.createRelease({
-                draft: false,
-                generate_release_notes: true,
-                name: process.env.RELEASE_TAG,
-                owner: context.repo.owner,
-                prerelease: false,
-                repo: context.repo.repo,
-                tag_name: process.env.RELEASE_TAG,
-              });
-            } catch (error) {
-              core.setFailed(error.message);
-            }
-
-#      - name: Upload release attachment
-#        uses: actions/github-script@v5
-#        with:
-#          script: |
-#            const fs = require('fs');
-#            const tag = context.ref.replace("refs/tags/", "");
-#            // Get release for this tag
-#            const release = await github.repos.getReleaseByTag({
-#              owner: context.repo.owner,
-#              repo: context.repo.repo,
-#              tag
-#            });
-#            // Upload the release asset
-#            await github.repos.uploadReleaseAsset({
-#              owner: context.repo.owner,
-#              repo: context.repo.repo,
-#              release_id: release.data.id,
-#              name: "dontpanic.oxt",
-#              data: await fs.readFileSync("./out/doncpanic.oxt")
-#            });
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: ./out/dontpanic.oxt
+          asset_name: dontpanic.oxt
+          asset_content_type: application/zip
