--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,10 +7,12 @@ on:
     branches: [ master ]
     paths-ignore:
       - '**.md'
+      - '.github/**'
   pull_request:
     branches: [ master ]
     paths-ignore:
       - '**.md'
+      - '.github/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
