--- a/.github/workflows/Build update.xml.yml
+++ b/.github/workflows/Build update.xml.yml
@@ -25,6 +25,7 @@ jobs:
       
       - name: Building update.xml
         run: |
+          cd src
           python build_update.xml.py
       
       - name: Pushing update.xml to git
