--- a/.github/workflows/Build update.xml.yml
+++ b/.github/workflows/Build update.xml.yml
@@ -12,7 +12,7 @@ name: Build update.xml
 
 jobs:
   build:
-    name: Upload Release Asset
+    name: Building update.xml 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
