--- a/.github/workflows/Build update.xml.yml
+++ b/.github/workflows/Build update.xml.yml
@@ -15,26 +15,16 @@ jobs:
     name: Building update.xml 
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.pull_request.head.ref }}
-
       - name: Install Python 3
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
       
-      - name: Building update.xml
+      - name: Checkout code and build update.xml
+        uses: actions/checkout@v3
         run: |
           cd src
           python build_update.xml.py
-      
-      - name: Pushing update.xml to git
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add dontpanic.update.xml
