--- a/.github/workflows/Build update.xml.yml
+++ b/.github/workflows/Build update.xml.yml
@@ -20,8 +20,10 @@ jobs:
         with:
           python-version: 3.8
       
-      - name: Checkout code and build update.xml
+      - name: Checkout code 
         uses: actions/checkout@v3
+        
+      - name: build update.xml
         run: |
           cd src
           python build_update.xml.py
